update index html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <table cellspacing="30">
       <tr>
-        <td><img src="images/eswar.jpeg"width="300"height="300" alt="eswar's image"></td>
+        <td><img src="eswar.jpeg"width="300"height="300" alt="eswar's image"></td>
         <td><h1>ESWARAMOORTHY M</h1>
         <p><em>i have finished my school education in <a href="http://www.arumugamacademy.com/">arumugam academy matric hr secondary school</a></em></p>
         <p><em>i am studying in <strong><a href="http://www.skacas.ac.in/">srikrishna adithya college</a></strong></em></p>
